--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
     "prop-types": "^15.5.10"
   }
 }
