--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ios/Pods/GVRSDK/Libraries/libGVRSDK.a filter=lfs diff=lfs merge=lfs -text
 Examples/ios/ViroExample/Pods/GVRSDK/Libraries/libGVRSDK.a filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
