--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preset": "react-native"
   },
   "peerDependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react": "16.11.0"
   },
   "files": [
     "components",
@@ -26,6 +25,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-native": "0.62.2"
   }
 }
