--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "dependencies": {
     "prop-types": "^15.5.10",
     "react-native": "0.62.2"
-  }
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/TobyX-Corp/phantom-react"
+  },
+  "homepage": "https://github.com/TobyX-Corp/phantom-reac"
 }
