--- a/android/phantom_react/build.gradle
+++ b/android/phantom_react/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('phantom_viro-release.aar'))
+artifacts.add("default", file('phantom_react-release.aar'))
