--- a/code-samples/android/app/build.gradle
+++ b/code-samples/android/app/build.gradle
@@ -159,8 +159,8 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation project(':arcore_client') // remove this if AR not required
     implementation project(':gvr_common')
-    implementation project(path: ':viro_renderer')
-    implementation project(path: ':react_viro')
+    implementation project(path: ':phantom_renderer')
+    implementation project(path: ':phantom_react')
     implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
     implementation 'com.amazonaws:aws-android-sdk-core:2.7.7'
