--- a/code-samples/package.json
+++ b/code-samples/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
+    "prestart": "./node_modules/phantom-react/bin/run_ngrok.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.3",
-    "react-viro": "2.16.0"
+    "phantom-react": "2.16.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
