--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "LICENSE"
   ],
   "dependencies": {
+    "create-react-class": "^15.7.0",
     "prop-types": "^15.5.10",
     "react-native": "0.63.4"
   },
